--- a/index.html
+++ b/index.html
@@ -205,6 +205,14 @@
     </a>
   </template>
 
+  <!-- Шаблон комментария пользователей -->
+  <template id="comments">
+    <li class="social__comment">
+      <img class="social__picture" src="img/avatar-4.svg" alt="Аватар комментатора фотографии" width="35" height="35">
+      <p class="social__text">Мега фото! Просто обалдеть. Как вам так удалось?</p>
+    </li>
+  </template>
+
   <!-- Сообщение с ошибкой загрузки изображения -->
   <template id="error">
     <section class="error">
