--- a/index.html
+++ b/index.html
@@ -115,9 +115,7 @@
 
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
-                  <input type="text" class="text__hashtags" name="hashtags" placeholder="#ХэшТег" maxlength="154"
-                  data-pristine-minlength-message="Минимальная длина 2 символа"
-                  data-pristine-maxlength-message="Максимальная длина одного хештега 20 символов">
+                  <input type="text" class="text__hashtags" name="hashtags" placeholder="#ХэшТег" maxlength="154">
                   <textarea class="text__description" name="description" placeholder="Ваш комментарий..." maxlength="140"></textarea>
                 </fieldset>
 
