добавил сообщение валидации

--- a/index.html
+++ b/index.html
@@ -115,8 +115,12 @@
 
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
-                  <input type="text" class="text__hashtags" name="hashtags" placeholder="#ХэшТег" maxlength="154">
-                  <textarea class="text__description" name="description" placeholder="Ваш комментарий..." maxlength="140"></textarea>
+                  <p class="text__item">
+                    <input type="text" class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
+                  </p>
+                  <p class="text__item">
+                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
+                  </p>
                 </fieldset>
 
                 <!-- Кнопка для отправки данных на сервер -->
