исправил незачтенные критерии

--- a/index.html
+++ b/index.html
@@ -228,6 +228,17 @@
     </section>
   </template>
 
+  <!-- Сообщение об ошибке загрузки постов -->
+
+  <template id="load-error">
+    <section class="load-error">
+      <div class="load-error__inner">
+        <h2 class="load-error__title">Ошибка соединения!</h2>
+        <button type="button" class="load-error__button">Закрыть окно</button>
+      </div>
+    </section>
+  </template>
+
   <!-- Сообщение об успешной загрузке изображения -->
   <template id="success">
     <section class="success">
